Fixed bug #33996 (No information given for fatal error on passing invalid value to typed argument)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@192479 c90b9560-bf6c-de11-be94-00142212c4b1